Mejora de diseno de nota compartida y correcciones de estabilidad